route2.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: edu1
  name: edu1
spec:
  host: edu2-edu6.apps.211-34-231-82.nip.io
  port:
    targetPort: 8080
  to:
    kind: Service
    name: edu1
    weight: 100
  wildcardPolicy: None
